--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     overflow: hidden;
 }
 .shake{
-    animation: shakebody 2s ease-in-out infinite; 
+    /* animation: shakebody 2s ease-in-out infinite;  */
 
 }
 .gameContainer{
@@ -16,10 +16,10 @@ body{
     /* background-position: center; */
     background-size: 100vw 100vh;
     width: 100%;
-    height: 100vh;
+    height: 92vh;
     overflow: hidden;
-    animation: shakebg 2s ease-in-out infinite;
-    animation: shakebg1 2s ease-in-out infinite;
+    animation: shakebg 4s ease-in-out infinite;
+    animation: shakebg1 8s ease-in-out infinite;
     
 }
 
@@ -105,13 +105,13 @@ body{
 @keyframes shakebody
 {
     0%{
-        transform: translateY(-25px);
+        transform: translateX(15px);
     }
     50%{
-        transform: translateY(25px);
+        transform: translateX(-15px);
     }
     100%{
-        transform: translateY(-25px);
+        transform: translateX(15px);
     }
 }
 
@@ -130,18 +130,18 @@ body{
 @keyframes shakebg1
 {
     0%{
-        transform: translateX(-25px);
+        transform: translateX(-65px);
     }
     25%{
-        transform: translateX(15px);
+        transform: translateX(65px);
     }
     50%{
-        transform: translateX(-25px);
+        transform: translateX(-65px);
     }
     75%{
-        transform: translateX(15px);
+        transform: translateX(65px);
     }
     100%{
-        transform: translateX(-25px);
+        transform: translateX(-65px);
     }
 }
